syntax = "proto3";

option go_package = ".;settings_pb";

package settings_pb;

message GetBatCaveSettingsRequest {
    string DeviceID = 1;
}

message GetBatCaveSettingsResponse {
    string DeviceID = 1;
    int32 DeepSleepDelay = 2;
}

message SetBatCaveSettingsRequest {
    string DeviceID = 1;
    int32 DeepSleepDelay = 2;
}

message SetBatCaveSettingsResponse {
    string DeviceID = 1;
    int32 DeepSleepDelay = 2;
}

service SettingsService {
   rpc GetBatCaveSettings(GetBatCaveSettingsRequest) returns (GetBatCaveSettingsResponse);
   rpc SetBatCaveSettings(SetBatCaveSettingsRequest) returns (SetBatCaveSettingsResponse);
}
